[project]
name = "api-udemy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tokuma Suzuki", email = "tokuma.suzuki@jdsc.ai" }
]
dependencies = [
    "fastapi>=0.115.0",
    "ruff>=0.6.8",
    "uvicorn>=0.31.0",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api_udemy"]
[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
exclude = ["*.md"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"

